# flk

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml  flake.nix  flk.nix  release-plz.toml
.flk/: config.nix  default.nix  overlays.nix  pins.nix
.flk/profiles/: docs.nix  rust.nix
.github/workflows/: ci.yml  deploy-docs.yml  release-cache.yml  release-plz.yml
flk-book/: book.toml
flk-book/src/: SUMMARY.md  api-reference.md  architecture.md  code-of-conduct.md  concepts.md  custom-commands.md  development.md  environment-variables.md  examples.md  faq.md  getting-started.md  installation.md  introduction.md  lock-management.md  templates.md  troubleshooting.md
flk-book/src/commands/: activate.md  add.md  cmd.md  completions.md  deep-search.md  direnv.md  env.md  export.md  hook.md  init.md  list.md  lock.md  overview.md  profile.md  remove.md  search.md  show.md  switch.md  update.md
issues/: 1.md
lib/: mkProject.nix
src/: lib.rs  main.rs
src/commands/: activate.rs  add.rs  add_command.rs  command.rs  completions.rs  direnv.rs  env.rs  export.rs  hook.rs  init.rs  list.rs  lock.rs  migrate.rs  mod.rs  profile_cache.rs  profiles.rs  remove.rs  remove_command.rs  search.rs  show.rs  update.rs
src/flake/: generator.rs  interface.rs  mod.rs  nix_render.rs  parser.rs
src/flake/interfaces/: mod.rs  overlays.rs  profiles.rs  shellhooks.rs  utils.rs
src/flake/parsers/: commands.rs  config.rs  env.rs  flake.rs  mod.rs  overlays.rs  packages.rs  utils.rs
src/helpers/: hooks.sh
src/nix/: mod.rs
src/utils/: backup.rs  mod.rs  visual.rs
templates/: default.nix  default_flake.nix  flake.nix  go_flake.nix  node_flake.nix  overlays.nix  pins.nix  python_flake.nix  rust_flake.nix
templates/profiles/: base.nix  default.nix  go.nix  node.nix  python.nix  rust.nix
templates/slim/: config.nix  flake.nix
tests/: flake_tests.nix  integration_tests.rs  overlays_tests.nix  pins_tests.nix  profile_tests.nix  unit_tests.rs
wix/: main.wxs
