[package]
name = "flk"
version = "0.1.0"
edition = "2021"
authors = ["AEduardo-dev"]
description = "A CLI tool for managing flake.nix files like Jetify Devbox"
license = "MIT"
repository = "https://github.com/AEduardo-dev/flk"
readme = "README.md"
homepage = "https://github.com/AEduardo-dev/flk"
documentation = "https://docs.rs/flk"
keywords = ["nix", "flake", "devbox", "cli"]
categories = ["command-line-utilities", "development-tools"]

[package.metadata.wix]
upgrade-guid = "27E5842B-50B1-4D19-A316-40A70A78AEA3"
path-guid = "3BB30D48-1F9B-4DA8-89F4-898D51FDD0EB"
license = false
eula = false

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
reqwest = { version = "0.12", features = [
  "json",
  "blocking",
  "rustls-tls",
], default-features = false }
tokio = { version = "1.35", features = ["full"] }
colored = "2.1"
indicatif = "0.17"
dirs = "5.0"
regex = "1.10"
urlencoding = "2.1.3"
chrono = "0.4.42"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[[bin]]
name = "flk"
path = "src/main.rs"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
