[package]
name = "flk"
version = "0.5.3"
edition = "2021"
authors = ["AEduardo-dev"]
description = "A CLI tool for managing flake.nix devShell environments"
license = "MIT"
repository = "https://github.com/AEduardo-dev/flk"
readme = "README.md"
homepage = "https://github.com/AEduardo-dev/flk"
documentation = "https://docs.rs/flk"
keywords = ["nix", "flake", "devbox", "cli"]
categories = ["command-line-utilities", "development-tools"]

[package.metadata.wix]
upgrade-guid = "27E5842B-50B1-4D19-A316-40A70A78AEA3"
path-guid = "3BB30D48-1F9B-4DA8-89F4-898D51FDD0EB"
license = false
eula = false

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.0"
colored = "3.1"
indicatif = "0.18"
dirs = "6.0"
chrono = "0.4.42"
clap_complete = "4.5.59"
signal-hook = "0.4.1"
nom = "8"
ureq = "3.1.4"
regex = "1.12.2"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[[bin]]
name = "flk"
path = "src/main.rs"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
# Adding colored v2.2.0 (available: v3.1.1)
#       Adding dirs v5.0.1 (available: v6.0.0)
#       Adding indicatif v0.17.11 (available: v0.18.4)
#       Adding nom v7.1.3 (available: v8.0.0)
#       Adding signal-hook v0.3.18 (available: v0.4.3)
#       Adding toml v0.8.23 (available: v1.0.3+spec-1.1.0)
#
